--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.3.1",
+    "flowbite-react": "^0.7.2",
+    "html-react-parser": "^5.0.11",
+    "path": "^0.12.7",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.12.2",
+    "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "tsparticles-preset-firefly": "^2.12.0",
+    "tsparticles-preset-fireworks": "^2.12.0",
+    "tsparticles-preset-snow": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "tailwindcss": "^3.4.0"
   }
 }
